RH-2008-01-24-2: Bugfix:    Missing globals in hedeby util fixed
                 Review:    CR

RH-2008-01-24-1: Bugfix:    output variable of get_conf_object will be initialized
                 Review:    JG

CR-2008-01-24-1: Enhancm.   enhanced hedeby installation to support ge services
                 Review:    RH

CR-2008-01-24-0: Bugfix:    o logging.tcl was not sourced in source_tcl_files()
                            o enhanced hedeby configuration checking
                 Review:    RH

RH-2008-01-23-0: Bugfix:    tcl error in setup_schedconf fixed
                 Review:    JG

OJ-2008-01-23-0: Enhance:   Added test case 2387 at bugs/issuezilla/2387.
	 	 Issue:     2387

RD-2008-01-23-0: Enhancem.: Added test for advance reservation hard/soft error
                 Review:    JG

OJ-2008-01-23-0: Enhancem.: Added test case 2387 at bugs/issuezilla/2387.
                 Issue:     2387
                 Review:    JG

RM-2008-01-22-0: Enhancem.: Updated parsing for new sdmadm suj hedeby command
                 Review:    MG

MD-2008-01-22-1: Bugfix:    autoinstall config checktest used wrong string
 
JG-2008-01-22-1: Enhancem.: Use the logging framework (JG-2008-01-16-0) for all
                            system_tests/clients checks.
                            Removed outdated performance tests.

MD-2008-01-22-0: Enhancem.: added testfunctionality to Issuetest 2459 from
                            checkin MD-2008-01-18-0
                 Review:    JG

JG-2008-01-22-0: Bugfix:    Autoinstall was broken for 6.0 and 6.1 clusters.
                 Review:    MD

MD-2008-01-18-0: Enhancem.: Added Issue test IZ 2459
                 Review:    HP

JG-2008-01-18-0: Enhancem.: Use the logging framework (JG-2008-01-16-0) for all
                            functional checks.

CR-2008-01-18-0: Enhancem.: o Added check that SMF is not active for testsuite
                              system