@@ -137,7 +137,7 @@ proc hedeby_issue_88_check {} {
       } else {
          # Check if the output of "sdmadm shutdown" contains the kill message
          set msg_params(0) "executor_vm"
-         set msg [create_bundle_string "ui.stopjvmcommand.kill" msg_params]
+         set msg [create_bundle_string "StopJVMCommand.JVMStopper.processKilled"]
          
          if { [string match "*${msg}*" $output] == 0} {
             add_proc_error "hedeby_issue_88_check" -1 "sdmadm shutdown did not print kill message"
